src/skins/default/en/css/lc.css
/* ... */
.products-sidebar-small-thumbnails div.product-photo {
  padding-right: 8px;
}

.products-sidebar-small-thumbnails .product-name,
.products-sidebar-big-thumbnails .product-name
{
  font-size: 16px;
  padding-top: 10px;
}

.products-sidebar-small-thumbnails .product-name {
  line-height: 18px;
}

.products-sidebar-big-thumbnails .product-name
{
  text-align: center;
}

.products-sidebar-small-thumbnails span.product-price {
  padding-top: 5px;
}

ul.products-sidebar-text-links li.product-cell {
  background-image: url(../images/products-sidebar-bullet.png);
  background-position: 1px 10px;
  background-repeat: no-repeat;
}

ul.products-sidebar-text-links li .product {
  line-height: normal;
  padding-bottom: 0px;
  padding-left: 11px;
}

.products-sidebar-text-links .product-name {
  font-size: 14px;
  font-family: Helvetica, Arial;
}

/**
 * Product block
 */
.product-block .product {
  padding: 0px;
}

.product-block .product-name
{
  font-size: 16px;
  padding-top: 0px;
  font-family: Helvetica, Arial;
  text-align: left;
}

.product-block span.product-price {
  padding-top: 3px;
  line-height: 21px;
}

/**
 * Categories menu
 */
.sidebar .catalog-categories > li > a
{
  font-size: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/**
 * Product options
 */

ul.product-options,
ul.product-options li.product-option
{
  background-color: #eff8fe;
}

ul.product-options
{
  width: auto;
  margin-right: 20px;
  padding: 13px 20px 0;
}

ul.product-options li.product-option
{
  padding: 0 0 13px;
}

.BlockMsg-change-options h2.ajax-title-loadable  {
  font-size: 24px;
}

/**
 * Product details page & product quick look
 */

.BlockMsg-product-quicklook
{
  width: 750px;
}

div.product-details .product-details-info
{
  margin-left: 480px;
}

div.BlockMsg-product-quicklook .product-details-info
{
  margin-left: 332px;
}

body.store-product h1#page-title,
.BlockMsg-product-quicklook .block-subcontainer > h2
{
  display: none;
}



.product-details .title
{
  padding-top: 0;
  clear: none;
  margin-bottom: 10px;
}



.product-details div.image
{
  position: relative;
  float: left;
  text-align: center;
}

div.product-details div.image
{
  padding: 20px 0;
  width: 440px;
}

.product-quicklook div.image
{
  width: 312px;
}


.product-details .product-photo
{
  padding: 0 6px;
  text-align: center;
  margin: 0 auto;
}

div.product-details .product-photo
{
  width: 330px;
}

.product-quicklook .product-photo
{
  width: 300px;
}

.product-details .product-photo-box
{
  width: 440px;
  margin: 0px auto;
  text-align: center;
  position: relative;
}

.product-details .product-photo-box .arrow
{
  display: block;
  outline-style: none;
  width: 55px;
  height: 55px;
}

.product-details .product-photo-box .arrow img
{
  width: 55px;
  height: 55px;
  display: block;
}

.product-details .product-photo-box .left-arrow img
{
  background: transparent url(../images/arrow_big_left.png) no-repeat left top;
}

.product-details .product-photo-box .right-arrow img
{
  background: transparent url(../images/arrow_big_right.png) no-repeat right top;
}


.product-details .cloud-zoom
{
  cursor: default;
}


.product-details .loupe
{
  display: block;
  margin: 0px auto;
  width: 55px;
  height: 55px;
  outline-style: none;
}

.product-details .loupe img
{
  background: transparent url(../images/loupe.png) no-repeat left top;
  width: 55px;
  height: 55px;
}


div.product-details .product-image-gallery
{
  width: 386px;
}

.product-quicklook .product-image-gallery
{
  width: 312px;
}

.product-image-gallery ul
{
  background-color: #ededed;
  padding: 8px;
  margin-top: 19px;
  margin-bottom: 0;
}

.product-image-gallery li
{
  padding: 0px;
  margin: 4px;
  border: 3px solid #fff;
  list-style: none;
  float: left;
  width: 60px;
  height: 60px;
  background-color: #fff;
  vertical-align: middle;
  text-align: center;
}

.product-image-gallery li.selected
{
  border-color: #6d6d6d;
}

.product-details div.image,
.product-details .product-details-info
{
  margin-bottom: 25px;
}



.product-details .product-rating
{
  height: 23px;
  vertical-align: middle;
}

.product-details .product-rating a
{
  font-size: 12px;
  margin: 0 8px;
}

.product-details .product-rating span.rating-stars
{
  color: #ffb000;
  font-size: 23px;
  letter-spacing: 3px;
  position: relative;
  top: 3px;
  left: 0;
}



.product-details .product-more-link,
.product-details .stock-level,
.product-quicklook .stock-level
{
  font-size: 18px;
}

.product-details .product-more-link
{
  margin-bottom: 20px;
  display: block;
}

.product-details span.product-price
{
  color: #ff6c00;
  font-size: 36px;
  line-height: 33px;
  margin-top: 18px;
  display: inline-block;
}

.product-details ul.product-price {
  list-style: none;
  display: block;
  margin-bottom: 70px;
}

.product-details ul.product-price li {
  float: left;
  background: none;
  padding: 0px;
}

.product-details .product-notify-on-price-drop
{
  margin: 6px 0 24px;
  font-size: 12px;
}


.product-details .product-options
{
  margin-top: 15px;
}

.product-details .product-buttons
{
  margin-top: 30px;
}


.product-details .product-buttons button
{
  margin-top: 0px;
  margin-bottom: 20px;
}

.product-details .product-qty
{
  margin-bottom: 20px;
}

.product-details .product-out-of-stock,
.product-quicklook .product-out-of-stock,
.product-details .product-items-available
{
  color: #888;

}

.product-details .product-in-stock,
.product-quicklook .product-in-stock
{
  color: #019026;
  display: block;
}

.product-details .product-items-available
{
  font-size: 14px;
}

.product-quicklook .product-qty
{
  display: block;
}

.product-details input.quantity
{
  border-width: 1px;
  width: 25px;
  height: 15px;
  text-align: right;
  padding: 4px 6px;
  margin-left: 8px;
  vertical-align: middle;
}

button.add2cart
{
  padding-left: 9px;
}
/* ... */

